--- a/README
+++ b/README
@@ -113,7 +113,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © Michal Josef Špaček 2021
+    © Michal Josef Špaček 2021-2022
 
     BSD 2-Clause License
 
