--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 TODO
 ====
 2. Second example with tags data (Data::HTML::A).
-3. Tests.
 4. Add CSS class variable to CSS
 5. When header => 1 and no title data, there is bad output.
 6.
@@ -10,3 +9,6 @@ Applied
 =======
 1. Implement pretty CSS
 OK [20221103] skim
+
+3. Tests.
+OK [20221109] skim
