Regen README file

--- a/README
+++ b/README
@@ -179,7 +179,9 @@ EXAMPLE2
      );
 
      # Table data.
-     my $table_data_ar = [];
+     my $table_data_ar = [
+             ['Country', 'Capital'],
+     ];
 
      # Process login button.
      $obj->init($table_data_ar, 'No data.');
@@ -213,9 +215,15 @@ EXAMPLE2
      # <body>
      #   <table class="table">
      #     <tr>
+     #       <th>
+     #         Country
+     #       </th>
+     #       <th>
+     #         Capital
+     #       </th>
      #     </tr>
      #     <tr>
-     #       <td colspan="0">
+     #       <td colspan="2">
      #         No data.
      #       </td>
      #     </tr>
