--- a/README
+++ b/README
@@ -52,9 +52,13 @@ METHODS
   "init"
      $obj->init($data_ar, $no_data_value);
 
-    Process initialization before page run. Variable $data_ar are data for
-    table. Variable $no_data_value contain information for situation when
-    data in table not exists.
+    Process initialization before page run.
+
+    Variable $data_ar are data for table. Each item in array could be
+    scalar, array with scalars or Data::HTML::A instance.
+
+    Variable $no_data_value contain information for situation when data in
+    table not exists.
 
     Returns undef.
 
