--- a/TODO
+++ b/TODO
@@ -3,7 +3,8 @@ TODO
 2. Second example with tags data (Data::HTML::A).
 5. When header => 1 and no title data, there is bad output.
 6. Add title before table?
-7.
+7. Add integration tests for Data::HTML::A
+8.
 
 Applied
 =======
