--- a/TODO
+++ b/TODO
@@ -4,7 +4,8 @@ TODO
 5. When header => 1 and no title data, there is bad output.
 6. Add title before table?
 7. Add integration tests for Data::HTML::A
-8.
+8. Support for stripped rows.
+9.
 
 Applied
 =======
