Improve links in doc

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.03
  - Fix processing of Data::HTML::A object in plain mode.
+ - Improve links in doc.
 
 0.02 2023-07-08T18:04:00+02:00
  - Implement 'css_table' parameter to CSS style.
