--- a/README
+++ b/README
@@ -20,7 +20,7 @@ METHODS
 
     *       "css"
 
-            'CSS::Struct::Output' object for process_css processing.
+            'CSS::Struct::Output' object for "process_css" processing.
 
             Default value is undef.
 
@@ -38,7 +38,7 @@ METHODS
 
     *       "tags"
 
-            'Tags::Output' object.
+            'Tags::Output' object for "process" processing.
 
             Default value is undef.
 
