--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.04
  - Rewrite from Data::HTML::A to Data::HTML::Element::A.
+ - Update copyright years.
 
 0.03 2023-07-09T02:08:36+02:00
  - Add example with usage of Data::HTML::A to doc.
