--- a/TODO
+++ b/TODO
@@ -2,8 +2,6 @@ TODO
 ====
 5. When header => 1 and no title data, there is bad output.
 6. Add title before table?
-7. Add integration tests for Data::HTML::Element::A
-How to deal with integration? Optional?
 8. Support for stripped rows.
 9. Check of header field value?
 10.
@@ -21,3 +19,8 @@ OK [20230708] skim
 
 2. Second example with tags data (Data::HTML::A).
 OK [20230709] skim
+
+7. Add integration tests for Data::HTML::Element::A
+How to deal with integration? Optional?
+Tests are on place.
+NONE [20240624] skim
