Fix DEPENDENCIES section in doc

--- a/README
+++ b/README
@@ -346,7 +346,8 @@ EXAMPLE3
      # </body>
 
 DEPENDENCIES
-    Class::Utils, Error::Pure, List::Util, Scalar::Util, Tags::HTML.
+    Class::Utils, Error::Pure, List::Util, Scalar::Util, Tags::HTML,
+    Tags::HTML::Element::A.
 
 REPOSITORY
     <https://github.com/michal-josef-spacek/Tags-HTML-Table-View>
