--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.07
  - Add test for no table data without 'no_data' message.
+ - Fix DEPENDENCIES section in doc.
  - Remove obsolete code.
  - Rewrite from List::MoreUtils to List::Util.
 
