--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.07
  - Add test for no table data without 'no_data' message.
  - Fix DEPENDENCIES section in doc.
+ - Fix dependencies.
  - Remove obsolete code.
  - Rewrite from List::MoreUtils to List::Util.
 
